--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.github.dcendents.android-maven'
 group = 'com.github.tplloi'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 17
@@ -36,30 +36,32 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
 
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    //compile 'org.jsoup:jsoup:1.10.2'
+    compile 'com.android.support:support-v4:27.1.1'
+    compile 'com.android.support:appcompat-v7:27.1.1'
+    compile 'com.android.support:design:27.1.1'
+    compile 'com.android.support:recyclerview-v7:27.1.1'
+    compile 'com.android.support:cardview-v7:27.1.1'
 
     compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.3.0'
+    compile 'io.reactivex:rxjava:1.3.6'
 
     compile 'com.android.support:multidex:1.0.3'
     compile 'org.greenrobot:eventbus:3.0.0'
 
-    //compile 'com.daimajia.easing:library:2.0@aar'
-    //compile 'com.daimajia.androidanimations:library:2.2@aar'
-
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    //compile 'com.github.bumptech.glide:glide:3.7.0'
+    //compile 'com.github.bumptech.glide:glide:4.4.0'
+    compile('com.github.bumptech.glide:glide:4.4.0@aar') {
+        transitive = true;
+    }
+    compile 'com.github.bumptech.glide:annotations:4.4.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
     //compile 'jp.wasabeef:glide-transformations:2.0.2'
 
+    //https://github.com/rubensousa/PreviewSeekBar
+    compile 'com.github.rubensousa:previewseekbar:1.2'
+    compile 'com.github.rubensousa:previewseekbar-exoplayer:2.6.0'
+
     compile 'com.google.code.gson:gson:2.8.2'
-    //compile 'com.daasuu:EasingInterpolator:1.0.0'
 
-    //compile 'com.google.android.gms:play-services-plus:11.8.0'
-
-    //compile 'com.google.android.gms:play-services-ads:11.8.0'
     compile 'com.nineoldandroids:library:2.4.0'//for draggable view
 }
