--- a/demouiza/build.gradle
+++ b/demouiza/build.gradle
@@ -16,8 +16,8 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "zzz.uiza.moduledemouiza"
@@ -93,8 +93,7 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-
+    //compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(modulePrefix + 'library-ui')
     //compile 'com.github.tplloi:uiza-sdk-android:1.0.2'
 }
