--- a/demouiza2/build.gradle
+++ b/demouiza2/build.gradle
@@ -52,7 +52,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //compile fileTree(dir: 'libs', include: ['*.jar'])
     //compile 'com.android.support:appcompat-v7:26.1.0'
 
     compile project(':library-ui')
@@ -60,5 +60,5 @@ dependencies {
     //uiza sdk
     //compile 'com.github.tplloi:uiza-sdk-android:1.0.2'
 
-    compile 'com.android.support:multidex:1.0.3'
+    //compile 'com.android.support:multidex:1.0.3'
 }
