--- a/demouiza2/build.gradle
+++ b/demouiza2/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "zzz.uiza.moduledemouiza2"
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
 
@@ -58,5 +58,5 @@ dependencies {
     //compile 'com.github.tplloi:uiza-sdk-android:1.0.2'
     //compile 'com.github.uizaio:uiza-sdk-player-android:1.0.3'
 
-    //compile 'com.android.support:multidex:1.0.3'
+    compile 'com.android.support:multidex:1.0.3'
 }
