--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 21
-        versionCode 3
-        versionName "1.0.3"
+        versionCode 4
+        versionName "1.0.4"
 
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
@@ -50,7 +50,7 @@ dependencies {
 
     compile('com.github.bumptech.glide:glide:4.4.0@aar') {
         transitive = true;
-        //exclude group: "com.android.support"
+        exclude group: "com.android.support"
     }
     //compile 'com.github.bumptech.glide:annotations:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
