--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     compile 'com.android.support:multidex:1.0.3'
     compile 'org.greenrobot:eventbus:3.0.0'
 
-    //compile 'com.github.bumptech.glide:glide:4.4.0'
+    //compile 'com.github.bumptech.glide:glide:4.5.0@aar'
     compile('com.github.bumptech.glide:glide:4.5.0@aar') {
         transitive = true;
         exclude group: "com.android.support"
