--- a/demouiza/build.gradle
+++ b/demouiza/build.gradle
@@ -94,5 +94,6 @@ repositories {
 
 dependencies {
     compile project(modulePrefix + 'library-ui')
-    //compile 'com.github.uizaio:uiza-sdk-player-android:1.0.4'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //compile 'com.github.uizaio:uiza-sdk-player-android:1.0.5'
 }
