--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 21
-        versionCode 5
-        versionName "1.0.5"
+        versionCode 6
+        versionName "1.0.6"
 
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
@@ -50,8 +50,8 @@ dependencies {
 
     //compile 'com.github.bumptech.glide:glide:4.5.0@aar'
     compile('com.github.bumptech.glide:glide:4.5.0@aar') {
-        transitive = true;
-        exclude group: "com.android.support"
+        transitive = true
+        exclude group: 'com.android.support'
     }
     //compile 'com.github.bumptech.glide:annotations:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
